trying to fix tab jump

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1961,7 +1961,7 @@ outline: -webkit-focus-ring-color auto 0px;
 	overflow: auto;
 }
 .tab-form {
-	padding-bottom: 0px;
+	padding-bottom: 15px;
 	padding-top: 0px;
 	padding-left: 15px;
 	padding-right: 15px;
